--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,9 +12,9 @@ jobs:
         uses: actions/checkout@v3
       - name: use the cache
         uses: actions/cache@v3
-          with: 
-            path: ~/.npm
-            key: cache-for-project${{ hashFiles('**/package-lock.json') }}
+        with: 
+          path: ~/.npm
+          key: cache-for-project${{ hashFiles('**/package-lock.json') }}
       - name: Install deps
         run: npm install
       - name: Test app
@@ -30,12 +30,12 @@ jobs:
       - name: Install NodeJs
         uses: actions/setup-node@v3
         with:
-          node-version: [14,16]
+          node-version: [14, 16] 
       - name: use the cache
         uses: actions/cache@v3
-          with: 
-            path: ~/.npm
-            key: cache-for-project${{ hashFiles('**/package-lock.json') }}
+        with: 
+          path: ~/.npm
+          key: cache-for-project${{ hashFiles('**/package-lock.json') }}
       - name: install deps
         run: npm ci
       - name: make a build
