--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Install NodeJs
         uses: actions/setup-node@v3
         with:
-          node-version: [14, 16] 
+          node-version: 14, 16 
       - name: use the cache
         uses: actions/cache@v3
         with: 
