--- a/.github/workflows/echoTest.yml
+++ b/.github/workflows/echoTest.yml
@@ -9,7 +9,7 @@ jobs:
         with:
           node-version: 14.x
       - name: print context
-        run: echo ${{ toJSON('github') }}
+        run: echo "${{ toJSON(github) }}"
       - name: print some
         run: |
           echo "texttexttexttexttexttexttext"
