--- a/.github/workflows/echoTest.yml
+++ b/.github/workflows/echoTest.yml
@@ -10,7 +10,7 @@ jobs:
         with:
           node-version: 14.x
       - name: print context
-        run: echo "${{ toJSON('github.event') }}"
+        run: echo "${{ toJSON(github) }}"
       - name: print some
         run: |
           echo "texttexttexttexttexttexttext"
