--- a/.github/workflows/echoTest.yml
+++ b/.github/workflows/echoTest.yml
@@ -2,8 +2,7 @@ name: echoDeploy
 on: workflow_dispatch
 jobs:
   deploy:
-    runs-on: windows-latest
-    continue-on-error: true
+    runs-on: ubuntu-latest
     steps:
       - name: print context
         run: echo "${{ toJSON(github) }}"
