--- a/.github/workflows/echoTest.yml
+++ b/.github/workflows/echoTest.yml
@@ -4,6 +4,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: install notejs
+        uses: actions/setup-node@v3.8.0
+        with:
+          note-version: 14.x
       - name: print context
         run: echo "${{ toJSON(github) }}"
       - name: print some
